plugins {
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java'
	id 'org.openjfx.javafxplugin' version '0.0.9'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '23'

repositories {
	mavenCentral()
}
dependencies {
	implementation "org.openjfx:javafx-controls:20.0.2"
	implementation "org.openjfx:javafx-fxml:20.0.2"
	// Pridajte ďalšie JavaFX moduly, ktoré používate
}

tasks.withType(JavaExec) {
	jvmArgs = [
			'--module-path', 'C:/Users/skola/javafx-sdk-23.0.1/lib',
			'--add-modules', 'javafx.controls,javafx.fxml'
	]

}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'com.h2database:h2'
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.openjfx:javafx-controls:20.0.2'
	implementation 'org.openjfx:javafx-fxml:20.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.0'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.json:json:20210307'
}

javafx {
	version = "20.0.2"
	modules = [ 'javafx.controls', 'javafx.fxml' ]
}

tasks.named('test') {
	useJUnitPlatform()
}